# souvenir-sv

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
souvenir/: __init__.py  check.py  image.py  zipcode.py
tests/: department_test.py  souvenir_modules.py
zip-codes-sv/: scrapper.py
zip_codes_sv/: scrapper.py
zipcode/: __init__.py  departament.py  department.py  scrapper.py
