# install/build dependencies
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

# defines download import
[project]
name = "souvenir-sv"
authors = [{name = "standoge", email = "stanlydoge@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
# execution dependencies
dependencies = [
"requests == 2.28.1",
"beautifulsoup4 == 4.11.1",
"bing-image-urls==0.1.5",
"google-search-results==2.4.1"
]
dynamic = ["version", "description"]

# defines module import
[tool.flit.module]
name = "souvenir"

# metadata
[project.urls]
Home = "https://github.com/standoge/souvenir-sv"